Fix dark mode switch on page load
Move bug to light mode in local storage

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,19 +1,19 @@
-/* Default light theme */
+/* Default dark theme */
 :root {
-  --bg-color: #ffffff;
-  --text-color: #000000;
-  --link-color: #1772d0;
-  --link-hover-color: #f09228;
-  --section-color: #0da348;
-}
-
-/* Dark theme overrides */
-[data-theme="dark"] {
   --bg-color: #121212;
   --text-color: #e0e0e0;
   --link-color: #bb86fc;
   --link-hover-color: #f09228;
   --section-color: #22ff22;
+}
+
+/* Dark theme overrides */
+[data-theme="light"] {
+  --bg-color: #ffffff;
+  --text-color: #000000;
+  --link-color: #1772d0;
+  --link-hover-color: #f09228;
+  --section-color: #0da348;
 }
 
 
